--- a/src/straightedge-ui/src/landingPage/landingPage.scss
+++ b/src/straightedge-ui/src/landingPage/landingPage.scss
@@ -84,11 +84,12 @@ h3{
     cursor: pointer;
     display: flex;
     align-self: center;
+    justify-content: space-evenly;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1;
     margin: 20px;
-    padding: 1em 2.8em;
+    padding: .5em 2.8em;
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
@@ -96,7 +97,8 @@ h3{
     transition: background 0.8s;
     &:hover{
     //   color: #fff;
-    box-shadow: 0 0 10px 0 $ternary inset, 0 0 10px 4px $ternary;
+    
+    box-shadow: 0 0 3px 0 $ternary inset, 0 0 9px 0px $ternary;
       outline: 0;
     }
     &:focus {
@@ -107,4 +109,13 @@ h3{
         background-size: 100%;
         transition: background 0s;
     }
+}
+
+.card{
+    display: flex;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 2px #ccc;
+    // width: 200px;
+    padding : 20px;
+    margin: 20px;
 }
