--- a/straightedge-ui/src/newProjectModal/newProject.scss
+++ b/straightedge-ui/src/newProjectModal/newProject.scss
@@ -56,69 +56,129 @@
       padding: 0.5rem 1rem;
       button {
         border: 0;
-        background: #78f89f;
-        border-radius: 5px;
-        padding: 0.5rem 1rem;
-        font-size: 0.8rem;
-        line-height: 1;
+        // background: #78f89f;
+        // border-radius: 5px;
+        // padding: 0.5rem 1rem;
+        // font-size: 0.8rem;
+        // line-height: 1;
       }
     }
   }
 
-
-
-
-
-  .app-label {
-    display: block;
-    font-size: 16px;
-    transform: translateY(25px);
-    color: #e2e2e2;
-    transition: all 0.5s;
-  }
-  
-  .app-input {
-    position: relative;
-    background: transparent;
-    width: 100%;
-    border: none;
-    outline: none;
-    padding: 8px 0;
-    font-size: 16px;
-  }
-  
-  .app-div {
-    padding: 30px 0 0 0;
-    position: relative;
-  }
-  
-  .app-div:after, .app-div:before {
-    content: "";
+  .loader {
+    height  : 20px;
+    width   : 250px;
     position: absolute;
-    display: block;
-    width: 100%;
-    height: 2px;
-    background-color: #8E8DBE; 
-    bottom: 0;
-    left: 0;
-    transition: all 0.5s;
+    top     : 0;
+    bottom  : 0;
+    left    : 0;
+    right   : 0;
+    margin  : auto;
+    z-index : 9999;
   }
   
-  .app-div::after {
-    background-color: $primary;
-    transform: scaleX(0);
+  .disablepointer {
+    pointer-events: none;
   }
   
-  .app-div:focus-within::after {
-    transform: scaleX(1);
+  .enablepointer {
+    pointer-events: auto;
   }
   
-  .app-div .app-label {
-    color: #8E8DBE;
+  .loader--dot {
+    animation-name           : loader;
+    animation-timing-function: ease-in-out;
+    animation-duration       : 3s;
+    animation-iteration-count: infinite;
+    height                   : 15px;
+    width                    : 15px;
+    border-radius            : 100%;
+    background-color         : black;
+    position                 : absolute;
+    border                   : 1px solid white;
   }
   
-  .is-completed .app-label {
-    font-size: 12px;
-    transform: translateY(0);
-    color: $primary;
+  .loader--dot:first-child {
+    background-color: #77fc02;
+    animation-delay : 0.5s;
+  }
+  
+  .loader--dot:nth-child(2) {
+    background-color: rgb(119, 0, 255);
+    animation-delay : 0.4s;
+  }
+  
+  .loader--dot:nth-child(3) {
+    background-color: #f31202;
+    animation-delay : 0.3s;
+  }
+  
+  .loader--dot:nth-child(4) {
+    background-color: #fa8703;
+    animation-delay : 0.2s;
+  }
+  
+  .loader--dot:nth-child(5) {
+    background-color: #00b0ff;
+    animation-delay : 0.1s;
+  }
+  
+  .loader--dot:nth-child(6) {
+    background-color: #fde400;
+    animation-delay : 0s;
+  }
+  
+  .loader--text {
+    position: absolute;
+    top     : 200%;
+    left    : 0;
+    right   : 0;
+    width   : 7rem;
+    margin  : auto;
+  }
+  
+  .loader--text:after {
+    content                  : "Loading";
+    font-weight              : bold;
+    color                    : white;
+    letter-spacing           : .8pt;
+    animation-name           : loading-text;
+    animation-duration       : 3s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes loader {
+    15% {
+      transform: translateX(0);
+    }
+  
+    45% {
+      transform: translateX(230px);
+    }
+  
+    65% {
+      transform: translateX(230px);
+    }
+  
+    95% {
+      transform: translateX(0);
+    }
+  }
+  
+  @keyframes loading-text {
+    0% {
+      content: "Loading ";
+    }
+  
+    25% {
+      content: "Loading .";
+    }
+  
+    50% {
+      content: "Loading . .";
+    }
+  
+    75% {
+      content: "Loading . . .";
+    }
   }
